--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,10 @@
 {
+    "name": "uconnect-backend",
+    "version": "1.0.0",
+    "main": "src/index.ts",
+    "scripts": {
+        "dev": "nodemon src/index.ts"
+    },
     "dependencies": {
         "bcrypt": "^5.1.1",
         "dotenv": "^16.4.5",
@@ -11,6 +17,7 @@
         "@types/express": "^5.0.0",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/pg": "^8.11.10",
+        "nodemon": "^3.1.7",
         "ts-node": "^10.9.2"
     }
 }
