--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "main": "src/index.ts",
     "scripts": {
         "dev": "nodemon src/index.ts",
-        "build": "tsc",
+        "build": "npm install && tsc",
         "start": "node dist/index.js"
     },
     "dependencies": {
