--- a/client/UConnect/package.json
+++ b/client/UConnect/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "expo": "^52.0.5",
     "expo-status-bar": "~2.0.0",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-paper": "^5.12.5",
