--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
     "name": "UConnect",
-    
     "private": true,
     "workspaces": [
-      "client",
-      "server"
+        "client",
+        "server"
     ],
-
     "license": "MIT",
     "repository": "",
-
     "scripts": {
-        
+        "test": "jest"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.14",
+        "jest": "^29.7.0",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5"
     }
-    
-  }
+}
