--- a/client/UConnect/package.json
+++ b/client/UConnect/package.json
@@ -13,11 +13,13 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
+    "eas-cli": "^13.2.0",
     "expo": "^52.0.5",
     "expo-status-bar": "~2.0.0",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "^0.76.1",
+    "react-native-cli": "^2.0.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
